# computer-graphics-forward-rendering-pipeline

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Main.cpp  Makefile  Mesh.cpp  Mesh.h  Scene.cpp  Scene.h  Triangle.cpp  Triangle.h
Transformation/: Base.cpp  Base.h  Rotation.cpp  Rotation.h  Scaling.cpp  Scaling.h  Translation.cpp  Translation.h
Vector/: Helpers.cpp  Helpers.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h
